<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".fragments.UpdateCardsFragment">
  
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center"
    android:layout_marginTop="60dp"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    
    <TextView
      android:id="@+id/tvCard"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="8dp"
      android:text="@string/current_card2p"
      android:textSize="18sp" />
    
    <Spinner
      android:id="@+id/spCard"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:background="@drawable/border" />
    
    <TextView
      android:id="@+id/tvNewCard"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="8dp"
      android:text="@string/new_card2p"
      android:textSize="18sp" />
    
    <EditText
      android:id="@+id/txtCard"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:inputType="text"
      android:textColor="@color/gray"
      android:textSize="18sp" />
    
    <Button
      android:id="@+id/btnUpdateCard"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginTop="40dp"
      app:cornerRadius="25dp"
      android:text="@string/update"
      android:textColor="@color/white"
      android:textSize="18sp" />
  
  </LinearLayout>

</FrameLayout>